manifests/deploy-dev.yaml
# 创建命名空间 flow
apiVersion: v1
kind: Namespace
metadata:
  name: flow
---
# 创建 Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flow-service
  namespace: flow
  labels:
    app: flow-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flow-service
  template:
    metadata:
      labels:
        app: flow-service
    spec:
      serviceAccountName: flow
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: aliyun-docker-secret
      containers:
        - name: flow-service
          image: ${SERVICE_IMAGE}
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 70
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 1
            httpGet:
              path: /actuator/health/readiness
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: config
              mountPath: /application.yaml
              subPath: application.yaml
      volumes:
        - name: config
          configMap:
            name: flow-service-config
            items:
              - key: application.yaml
                path: application.yaml
---
# 创建服务
apiVersion: v1
kind: Service
metadata:
  name: flow-service
  namespace: flow
  labels:
    app: flow-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: flow-service
  type: ClusterIP
---
# 创建 Ingress
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: flow-service
  namespace: flow
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: flow-service
              servicePort: 80
      host: api.flow.wgv.show
